Cleanup, updated Message handling
# Conflicts:
#	core/src/com/projectkorra/projectkorra/command/PresetCommand.java
#	core/src/com/projectkorra/projectkorra/configuration/ConfigManager.java